--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +49,17 @@
     "import numpy as np\n",
     "import sklearn as sk\n",
     "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "# from sklearn import train_test_split\n",
+    "from sklearn.datasets import make_regression\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +213,7 @@
        "[300 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +222,7 @@
     "np.random.seed(1)\n",
     "bias = 20*np.random.randn()\n",
     "\n",
-    "X, y, coef = sk.datasets.make_regression(n_samples=300, \n",
+    "X, y, coef = make_regression(n_samples=300, \n",
     "                                   n_features=5,    # n_features = 1 --> simple linear regression\n",
     "                                   noise=30, \n",
     "                                   bias = bias, \n",
@@ -240,7 +244,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here. Add cells as needed."
+    "# Your code here. Add cells as needed.\n",
+    "X_columns = column_names\n",
+    "\n",
+    "X = reg_df\n",
+    "y = reg_df['y']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = sk.model_selection.train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "model_linreg = LinearRegression()\n",
+    "model_linreg.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -669,7 +682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datascience",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -683,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.14"
   },
   "orig_nbformat": 4
  },
